[FIX] ajax download indicator set z-index high, else the loading message is hidden
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@19372 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/coelesce.css
+++ b/styles/coelesce.css
@@ -2577,6 +2577,7 @@ div.messureadbody {
 /***** Ajax *****/
 
 div#ajaxLoading {
+	z-index: 100000;
 	display: none;
 	position: absolute;
 	top: 50px;
